--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,11 @@ name: naruto_arena
 dependencies:
   args: ^0.13.4
   dotenv: ^0.1.3
-  # markov: ^1.0.0
   string_scanner: ^1.0.0
   tuple: ^1.0.0
-dependency_overrides:
-  string_scanner: ^1.0.0
+dev_dependencies:
+  angel_common: ^1.0.0
+  dart_style: ^1.0.0
+  html: ^0.13.2
+  recase: ^1.0.0
+  test: ^0.12.0
